--- a/helicon/helicon.csproj
+++ b/helicon/helicon.csproj
@@ -140,6 +140,7 @@
     <Compile Include="extra\glib\Email\RxMailMessage.cs" />
     <Compile Include="HtmlUtils.cs" />
     <Compile Include="LOG.cs" />
+    <Compile Include="OAuth2Creds.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RepeatException.cs" />
